force-app/main/default/objects/Opportunity/fields/Product_Categories__c.field-meta.xml
<CustomField>
    <fullName>Product_Categories__c</fullName>
    <description>Ceramics (including wall tile, floor tile, porcelain, sintered stone, etc)
Shower products (including shower enclosures, handels, shower tray, etc)
Bathroom accesories (including mirrors, soap dishes, radiators, etc)
Sanitaryware (including toilets, bidet, etc)
Adhesives and other compliments for instalation</description>
    <inlineHelpText>Ceramics (including wall tile, floor tile, porcelain, sintered stone)
Shower products (including shower enclosures, handels, shower tray)
Bathroom accesories (including mirrors, soap dishes, radiators)
Sanitaryware (including toilets, bidet)</inlineHelpText>
    <label>Product Categories</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Adhesives</fullName>
                <label>Adhesives and other compliments</label>
            </value>
            <value>
                <fullName>Altissima</fullName>
            </value>
            <value>
                <fullName>Bathroom accesories</fullName>
            </value>
            <value>
                <fullName>Bathroom furniture</fullName>
            </value>
            <value>
                <fullName>Bathtubs</fullName>
            </value>
            <value>
                <fullName>Bonded Facades</fullName>
            </value>
            <value>
                <fullName>Ceramics</fullName>
            </value>
            <value>
                <fullName>Countertops</fullName>
            </value>
            <value>
                <fullName>Fitwall</fullName>
            </value>
            <value>
                <fullName>Kitchen furniture</fullName>
            </value>
            <value>
                <fullName>Krion</fullName>
            </value>
            <value>
                <fullName>Laminate</fullName>
            </value>
            <value>
                <fullName>Linkfloor</fullName>
            </value>
            <value>
                <fullName>Mosaics</fullName>
            </value>
            <value>
                <fullName>Natural Stone</fullName>
            </value>
            <value>
                <fullName>Offsite</fullName>
            </value>
            <value>
                <fullName>OSM Facade</fullName>
            </value>
            <value>
                <fullName>OSM Kitchens</fullName>
            </value>
            <value>
                <fullName>OSM Pods</fullName>
            </value>
            <value>
                <fullName>OSM Utility Cupboard</fullName>
                <isActive>false</isActive>
                <label>OSM Utility Cupboard</label>
            </value>
            <value>
                <fullName>Others</fullName>
                <isActive>false</isActive>
                <label>Others</label>
            </value>
            <value>
                <fullName>Pods</fullName>
                <isActive>false</isActive>
                <label>Pods</label>
            </value>
            <value>
                <fullName>Raised access flooring</fullName>
            </value>
            <value>
                <fullName>Sanitaryware</fullName>
            </value>
            <value>
                <fullName>Shower products</fullName>
            </value>
            <value>
                <fullName>Taps</fullName>
            </value>
            <value>
                <fullName>Ventilated facades</fullName>
            </value>
            <value>
                <fullName>Wallpaper</fullName>
            </value>
            <value>
                <fullName>Washbasin</fullName>
            </value>
            <value>
                <fullName>Wood</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>