force-app/main/default/objects/Opportunity/fields/ProjectType__c.field-meta.xml
<CustomField>
    <fullName>ProjectType__c</fullName>
    <label>ProjectType</label>
    <type>TextArea</type>
</CustomField>