force-app/main/default/objects/Opportunity/fields/ProjectZone__c.field-meta.xml
<CustomField>
    <fullName>ProjectZone__c</fullName>
    <label>ProjectZone</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Whole remodelation</fullName>
            </value>
            <value>
                <fullName>Bathroom</fullName>
            </value>
            <value>
                <fullName>Kitchen</fullName>
            </value>
            <value>
                <fullName>Room</fullName>
            </value>
            <value>
                <fullName>Others</fullName>
            </value>
            <value>
                <fullName>Pavement</fullName>
            </value>
            <value>
                <fullName>Flooring</fullName>
            </value>
            <value>
                <fullName>Swimming pool</fullName>
            </value>
            <value>
                <fullName>Living room</fullName>
            </value>
            <value>
                <fullName>Dining room</fullName>
            </value>
            <value>
                <fullName>Gym</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>