force-app/main/default/objects/Opportunity/fields/ProjetReference__c.field-meta.xml
<CustomField>
    <fullName>ProjetReference__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Projet de Référence</label>
    <type>Checkbox</type>
</CustomField>