force-app/main/default/objects/Opportunity/fields/Reason_Lost__c.field-meta.xml
<CustomField>
    <fullName>Reason_Lost__c</fullName>
    <label>Reason Lost</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>AUTOMATICCLOSURE</fullName>
                <label>Automatic closure</label>
            </value>
            <value>
                <fullName>Customer not Ready</fullName>
            </value>
            <value>
                <fullName>Duplicated Ecommerce Opportunity</fullName>
            </value>
            <value>
                <fullName>Lack of product availability</fullName>
            </value>
            <value>
                <fullName>Lack of product</fullName>
                <label>Lack of product range</label>
            </value>
            <value>
                <fullName>Late in the process</fullName>
            </value>
            <value>
                <fullName>No Decision / Non-Responsive</fullName>
            </value>
            <value>
                <fullName>Ordered through Trade Account</fullName>
            </value>
            <value>
                <fullName>Ordered Via Online</fullName>
            </value>
            <value>
                <fullName>Price</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>