force-app/main/default/objects/Opportunity/fields/Reason_Others__c.field-meta.xml
<CustomField>
    <fullName>Reason_Others__c</fullName>
    <label>Reason Others</label>
    <type>TextArea</type>
</CustomField>