force-app/main/default/objects/Opportunity/fields/ReasonNoInterest__c.field-meta.xml
<CustomField>
    <fullName>ReasonNoInterest__c</fullName>
    <label>ReasonNoInterest</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>I don’t like it</fullName>
            </value>
            <value>
                <fullName>Cheaper in other company</fullName>
            </value>
            <value>
                <fullName>The product I like is not available</fullName>
            </value>
            <value>
                <fullName>I change my mind</fullName>
                <label>I&apos;ve changed my mind</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>