force-app/main/default/objects/Opportunity/fields/ReasonNotAdvice__c.field-meta.xml
<CustomField>
    <fullName>ReasonNotAdvice__c</fullName>
    <label>ReasonNotAdvice</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>I don&apos;t have any time at this moment</fullName>
            </value>
            <value>
                <fullName>I want to consult it</fullName>
            </value>
            <value>
                <fullName>I am checking some other options</fullName>
            </value>
            <value>
                <fullName>I have just buy other materials</fullName>
                <label>I have just bought other materials</label>
            </value>
            <value>
                <fullName>Deferred payment</fullName>
            </value>
            <value>
                <fullName>What if I don&apos;t like the final result</fullName>
            </value>
            <value>
                <fullName>I have little time to manage the project</fullName>
            </value>
            <value>
                <fullName>I&apos;m stressed about the project</fullName>
            </value>
            <value>
                <fullName>I doubt if I&apos;m making the best choices</fullName>
            </value>
            <value>
                <fullName>The product range does not fit my needs</fullName>
            </value>
            <value>
                <fullName>Material collection</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>