force-app/main/default/objects/Opportunity/fields/ReasonPending__c.field-meta.xml
<CustomField>
    <fullName>ReasonPending__c</fullName>
    <description>El pedido ya está hecho por la plataforma de ecommerce o la cita en tienda ya está solicitada y la oportunidad se mantiene a la espera de una acción que el cliente tiene que finalizar</description>
    <inlineHelpText>La oportunidad se mantiene a la espera de una acción que el cliente tiene que finalizar</inlineHelpText>
    <label>ReasonPending</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>In shop date</fullName>
            </value>
            <value>
                <fullName>Pending checkout</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>