force-app/main/default/objects/Opportunity/fields/ReasonProject__c.field-meta.xml
<CustomField>
    <fullName>ReasonProject__c</fullName>
    <label>ReasonProject</label>
    <type>TextArea</type>
</CustomField>