force-app/main/default/objects/Opportunity/fields/ReasonProjectPostponed__c.field-meta.xml
<CustomField>
    <fullName>ReasonProjectPostponed__c</fullName>
    <label>ReasonProjectPostponed</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>I am stressed</fullName>
            </value>
            <value>
                <fullName>I am undecided about the materials</fullName>
            </value>
            <value>
                <fullName>I need more time to organize</fullName>
            </value>
            <value>
                <fullName>Lack of knowledge of the range and advantages of the brand</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>