force-app/main/default/objects/Opportunity/fields/Recovered__c.field-meta.xml
<CustomField>
    <fullName>Recovered__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Recovered</label>
    <type>Checkbox</type>
</CustomField>