force-app/main/default/objects/Opportunity/fields/Request_Store_Appointment__c.field-meta.xml
<CustomField>
    <fullName>Request_Store_Appointment__c</fullName>
    <label>Request Store Appointment</label>
    <type>Date</type>
</CustomField>