force-app/main/default/objects/Opportunity/fields/Rol_Usuario_ANA__c.field-meta.xml
<CustomField>
    <fullName>Rol_Usuario_ANA__c</fullName>
    <formula>CreatedBy.UserRole.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Rol_Usuario_ANA</label>
    <type>Text</type>
</CustomField>