force-app/main/default/objects/Opportunity/fields/roomTypeOutdoorPatio__c.field-meta.xml
<CustomField>
    <fullName>roomTypeOutdoorPatio__c</fullName>
    <description>Quantity of outdoor patios on the project</description>
    <inlineHelpText>Number of outdoor patios, equal or greater than 0</inlineHelpText>
    <label>No. Outdoor Patios</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>