force-app/main/default/objects/Opportunity/fields/Sales_Office_Date__c.field-meta.xml
<CustomField>
    <fullName>Sales_Office_Date__c</fullName>
    <label>Sales Office Date</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>sales_office2</valueSetName>
    </valueSet>
</CustomField>