force-app/main/default/objects/Opportunity/fields/Sales_Office_Text_Owner__c.field-meta.xml
<CustomField>
    <fullName>Sales_Office_Text_Owner__c</fullName>
    <formula>Owner.Sales_Office_Text__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sales Office Text Owner</label>
    <type>Text</type>
</CustomField>