force-app/main/default/objects/Opportunity/fields/Sales_Org__c.field-meta.xml
<CustomField>
    <fullName>Sales_Org__c</fullName>
    <description>Default Sales Org of the User who created the Opportunity</description>
    <label>Sales Org</label>
    <length>100</length>
    <type>Text</type>
</CustomField>