force-app/main/default/objects/Opportunity/fields/Sales_Org_Date__c.field-meta.xml
<CustomField>
    <fullName>Sales_Org_Date__c</fullName>
    <label>Sales Org Date</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>sales_orgs</valueSetName>
    </valueSet>
</CustomField>