force-app/main/default/objects/Opportunity/fields/Sales_Org_Text_Owner__c.field-meta.xml
<CustomField>
    <fullName>Sales_Org_Text_Owner__c</fullName>
    <formula>TEXT(Owner.Default_Sales_Organization__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sales Org Text Owner</label>
    <type>Text</type>
</CustomField>