force-app/main/default/objects/Opportunity/fields/Sales_Organizational_Unit__c.field-meta.xml
<CustomField>
    <fullName>Sales_Organizational_Unit__c</fullName>
    <formula>TEXT( CreatedBy.Default_Sales_Organization__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sales Organizational Unit</label>
    <type>Text</type>
</CustomField>