force-app/main/default/objects/Opportunity/fields/SalesOfficeDate__c.field-meta.xml
<CustomField>
    <fullName>SalesOfficeDate__c</fullName>
    <label>SalesOfficeDate</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>sales_office2</valueSetName>
    </valueSet>
</CustomField>