force-app/main/default/objects/Opportunity/fields/SalesOrgDate__c.field-meta.xml
<CustomField>
    <fullName>SalesOrgDate__c</fullName>
    <label>SalesOrgDate</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>sales_orgs</valueSetName>
    </valueSet>
</CustomField>