force-app/main/default/objects/Opportunity/fields/SalesOrglookup__c.field-meta.xml
<CustomField>
    <fullName>SalesOrglookup__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sales Org</label>
    <referenceTo>Sales_Org__c</referenceTo>
    <relationshipLabel>Opportunities</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>