force-app/main/default/objects/Opportunity/fields/SalesProgram__c.field-meta.xml
<CustomField>
    <fullName>SalesProgram__c</fullName>
    <description>Picklist para completar de forma automática dependiendo diversas variables de la oportunidad</description>
    <label>Sales Program</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>TANDEM</fullName>
                <label>Tándem</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>