force-app/main/default/objects/Opportunity/fields/SAP_Order__c.field-meta.xml
<CustomField>
    <fullName>SAP_Order__c</fullName>
    <description>SAP Order Number</description>
    <label>SAP Order</label>
    <length>10</length>
    <type>Text</type>
</CustomField>