force-app/main/default/objects/Opportunity/fields/SAP_Sales_Office__c.field-meta.xml
<CustomField>
    <fullName>SAP_Sales_Office__c</fullName>
    <description>Oficina de ventas de SAP - Tienda</description>
    <inlineHelpText>Oficina de ventas de SAP - Tienda</inlineHelpText>
    <label>SAP Sales Office</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>