force-app/main/default/objects/Opportunity/fields/SAP_Status__c.field-meta.xml
<CustomField>
    <fullName>SAP_Status__c</fullName>
    <description>Indicates the status of the sending of the Opportunity to SAP.
If the opportunity has not been sent then the field will remain empty.
If it was sent then the posible values are: &quot;In Proccess&quot;, &quot;Success&quot; or the Error Message of the transaction.</description>
    <label>SAP Status</label>
    <type>TextArea</type>
</CustomField>