force-app/main/default/objects/Opportunity/fields/Satisfaction__c.field-meta.xml
<CustomField>
    <fullName>Satisfaction__c</fullName>
    <label>Satisfaction</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Satisfied</fullName>
            </value>
            <value>
                <fullName>Not satisfied</fullName>
            </value>
            <value>
                <fullName>Not defined</fullName>
                <default>true</default>
                <label>Not defined</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>