force-app/main/default/objects/Opportunity/fields/selectProgram__c.field-meta.xml
<CustomField>
    <fullName>selectProgram__c</fullName>
    <defaultValue>false</defaultValue>
    <description>En principio para marcar si una oportunidad pertecene al programa SELECT</description>
    <label>SELECT program</label>
    <type>Checkbox</type>
</CustomField>