force-app/main/default/objects/Opportunity/fields/Solicitud_Cita_En_Tienda__c.field-meta.xml
<CustomField>
    <fullName>Solicitud_Cita_En_Tienda__c</fullName>
    <label>Solicitud Cita En Tienda</label>
    <type>Date</type>
</CustomField>