force-app/main/default/objects/Opportunity/fields/Start_Project_Date__c.field-meta.xml
<CustomField>
    <fullName>Start_Project_Date__c</fullName>
    <label>Start Project Date</label>
    <type>DateTime</type>
</CustomField>