force-app/main/default/objects/Opportunity/fields/Verified__c.field-meta.xml
<CustomField>
    <fullName>Verified__c</fullName>
    <defaultValue>false</defaultValue>
    <description>True if is verified through some methods. For exemple, if it&apos;s created from porsamarket</description>
    <label>Verified</label>
    <type>Checkbox</type>
</CustomField>