force-app/main/default/objects/Opportunity/recordTypes/Automatic_Opportunity.recordType-meta.xml
<RecordType>
    <fullName>Automatic_Opportunity</fullName>
    <active>true</active>
    <businessProcess>Automatic opp process</businessProcess>
    <description>Available only for administrators</description>
    <label>Automatic Opportunity</label>
</RecordType>