force-app/main/default/objects/Opportunity/recordTypes/Oportunidad_neoris.recordType-meta.xml
<RecordType>
    <fullName>Oportunidad_neoris</fullName>
    <active>true</active>
    <businessProcess>Proceso Oportunidad Porcelanosa</businessProcess>
    <label>Oportunidad_Neoris</label>
</RecordType>