force-app/main/default/objects/Opportunity/recordTypes/Project_retail.recordType-meta.xml
<RecordType>
    <fullName>Project_retail</fullName>
    <active>true</active>
    <businessProcess>Sales process retail</businessProcess>
    <label>Project retail</label>
</RecordType>