force-app/main/default/objects/Opportunity/recordTypes/Project_trade.recordType-meta.xml
<RecordType>
    <fullName>Project_trade</fullName>
    <active>true</active>
    <businessProcess>Sales process trade</businessProcess>
    <label>Project trade</label>
</RecordType>