force-app/main/default/objects/Opportunity/validationRules/Close_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>Close_Date</fullName>
    <active>false</active>
    <errorConditionFormula>AND( CloseDate &lt;  TODAY() ,TRUE)</errorConditionFormula>
    <errorMessage>Close date cannot be older than TODAY</errorMessage>
</ValidationRule>