force-app/main/default/objects/Opportunity/validationRules/Condition_stage_awating_trade.validationRule-meta.xml
<ValidationRule>
    <fullName>Condition_stage_awating_trade</fullName>
    <active>true</active>
    <errorConditionFormula>AND( CONTAINS($User.Username, &apos;loads.user&apos;) = false,RecordType.Name = &quot;Project trade&quot;, 

ISPICKVAL(StageName , &quot;Esperando pedido&quot;), 
ISCHANGED(StageName), 
ISPICKVAL(Offer_has_been_accepted__c ,&quot;&quot;) 
)</errorConditionFormula>
    <errorDisplayField>Offer_has_been_accepted__c</errorDisplayField>
    <errorMessage>Please confirm offer has been accepted to move on to the next stage</errorMessage>
</ValidationRule>