force-app/main/default/objects/Opportunity/validationRules/Condition_stage_lost.validationRule-meta.xml
<ValidationRule>
    <fullName>Condition_stage_lost</fullName>
    <active>true</active>
    <errorConditionFormula>AND( CONTAINS($User.Username, &apos;loads.user&apos;) = false,OR(RecordType.Name = &quot;Project trade&quot;,RecordType.Name = &quot;Project retail&quot;) , 

ISPICKVAL(StageName , &quot;Lost&quot;), 
ISCHANGED(StageName), 
ISPICKVAL(Reason_Lost__c ,&quot;&quot;) 
)</errorConditionFormula>
    <errorMessage>You must select a reason lost</errorMessage>
</ValidationRule>