force-app/main/default/objects/Opportunity/validationRules/Condition_stage_quotation_trade.validationRule-meta.xml
<ValidationRule>
    <fullName>Condition_stage_quotation_trade</fullName>
    <active>true</active>
    <errorConditionFormula>AND( CONTAINS($User.Username, &apos;loads.user&apos;) = false,RecordType.Name = &quot;Project trade&quot;, 
 
ISPICKVAL(StageName , &quot;Cotización&quot;), 
ISCHANGED(StageName), 
ISPICKVAL( Have_we_won_specification__c ,&quot;&quot;) 
)</errorConditionFormula>
    <errorDisplayField>Have_we_won_specification__c</errorDisplayField>
    <errorMessage>Please confirm Porcelanosa has been included in the specification to move on to the next stage</errorMessage>
</ValidationRule>