force-app/main/default/objects/Opportunity/validationRules/Creacion_nueva_oportunidad_Cuenta.validationRule-meta.xml
<ValidationRule>
    <fullName>Creacion_nueva_oportunidad_Cuenta</fullName>
    <active>true</active>
    <description>Al momento de la creación, debe especificarse la Cuenta relacionada</description>
    <errorConditionFormula>AND( 
ISNEW(), 
AccountId = NULL
)</errorConditionFormula>
    <errorDisplayField>AccountId</errorDisplayField>
    <errorMessage>Al momento de la creación, debe especificarse la Cuenta relacionada</errorMessage>
</ValidationRule>